Add multi module communication (in pom files)

--- a/config.json
+++ b/config.json
@@ -1,10 +1,19 @@
 {
   "asd": {
-    "hasKotlin": true
+    "hasKotlinSrc": true,
+    "isKotlinBuild": true
+
   },
   "wewe": {
-    "hasKotlin": true
+    "isKotlinBuild": true,
+    "dependencies": [
+      "asd",
+      "qqq"
+    ]
   },
   "qqq": {
+    "dependencies": [
+      "asd"
+    ]
   }
 }
